// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render ExpensesSummary component with multiple expenses 1`] = `
<div>
  <h4>
    Viewing 3 expenses totalling $1,981.95
  </h4>
</div>
`;

exports[`should render ExpensesSummary component with single expense 1`] = `
<div>
  <h4>
    Viewing 1 expense totalling $1.95
  </h4>
</div>
`;
